# ClientApp/src/services/openapi/swagger.json
@@ -2682,6 +2682,14 @@
               "format": "date",
               "nullable": true
             }
+          },
+          {
+            "name": "muscleGroup",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            }
           }
         ],
         "responses": {
@@ -3842,6 +3850,44 @@
               "application/problem+json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "JWTBearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/muscle-groups/": {
+      "get": {
+        "tags": [
+          "Muscle-Groups"
+        ],
+        "operationId": "GetMuscleGroups",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/MuscleGroupDto"
+                  }
                 }
               }
             }
@@ -7405,6 +7451,33 @@
         "properties": {
           "ongoingTrainingId": {
             "type": "string"
+          }
+        }
+      },
+      "MuscleGroupDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "id",
+          "name",
+          "children"
+        ],
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "parentMuscleGroupId": {
+            "type": "string",
+            "nullable": true
+          },
+          "children": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/MuscleGroupDto"
+            }
           }
         }
       },
