# Modules/Trainings/TrackYourLife.Modules.Trainings.Contracts/Dtos/MuscleGroupDto.cs
@@ -1,0 +1,10 @@
+using TrackYourLife.Modules.Trainings.Domain.Features.MuscleGroups;
+
+namespace TrackYourLife.Modules.Trainings.Contracts.Dtos;
+
+public sealed record MuscleGroupDto(
+    MuscleGroupId Id,
+    string Name,
+    MuscleGroupId? ParentMuscleGroupId,
+    IReadOnlyList<MuscleGroupDto> Children
+);
