# Modules/Trainings/TrackYourLife.Modules.Trainings.Infrastructure/Data/TrainingsWriteDbContext.cs
@@ -1,8 +1,9 @@
-﻿using Microsoft.EntityFrameworkCore;
+using Microsoft.EntityFrameworkCore;
 using Microsoft.EntityFrameworkCore.Migrations;
 using Microsoft.Extensions.Configuration;
 using TrackYourLife.Modules.Trainings.Domain.Features.Exercises;
 using TrackYourLife.Modules.Trainings.Domain.Features.ExercisesHistories;
+using TrackYourLife.Modules.Trainings.Domain.Features.MuscleGroups;
 using TrackYourLife.Modules.Trainings.Domain.Features.OngoingTrainings;
 using TrackYourLife.Modules.Trainings.Domain.Features.TrainingExercises;
 using TrackYourLife.Modules.Trainings.Domain.Features.Trainings;
@@ -28,6 +29,7 @@ public sealed class TrainingsWriteDbContext(
     public DbSet<OutboxMessage> OutboxMessages { get; set; }
     public DbSet<OngoingTraining> OngoingTrainings { get; set; }
     public DbSet<ExerciseHistory> ExerciseHistories { get; set; }
+    public DbSet<MuscleGroup> MuscleGroups { get; set; }
 
     protected override void OnConfiguring(DbContextOptionsBuilder optionsBuilder)
     {
